--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,4 +6,8 @@
   .navLink {
     @apply hover:underline decoration-yellow-500 text-center decoration-2 active:underline underline-offset-8 rounded-full p-4 cursor-pointer hover:font-bold capitalize hover:scale-110 transition-transform duration-200 ease-in;
   }
+
+  .headerTitle {
+    @apply text-4xl font-serif capitalize px-10 py-5 underline decoration-orange-400 decoration-2 underline-offset-4 decoration-double;
+  }
 }
